<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/textview_border"
        />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textView">

        <LinearLayout
            android:id="@+id/lr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butC" />
            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but0" />
            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butBack" />
            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butA" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lr1" >
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1" />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2" />
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but3" />
            <Button
                android:id="@+id/buttonS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butS" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lr2" >
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but4" />
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but5" />
            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but6" />
            <Button
                android:id="@+id/buttonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butM" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lr3" >
            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but7" />
            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but8" />
            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but9" />
            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butD" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butEq"
            android:layout_below="@id/ll"
            />
    </LinearLayout>
    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:text="@string/butH"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/historytv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:maxLines="5"
        android:layout_below="@id/historyButton" />

</RelativeLayout>